Implement collapsible navbar with hamburger icon for mobile view

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <div class="container">
             <nav>
                 <div class="logo">Sid</div>
+                <button id="mobile-menu-toggle" aria-label="Toggle mobile menu">
+                    <span class="hamburger-icon">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </span>
+                </button>
                 <div class="nav-right">
                     <ul>
                         <li><a href="#about">About</a></li>
