Add last updated timestamp to footer
- Added "Last updated: August 19, 2025" to footer
- Implemented responsive layout for footer timestamp
- Desktop: copyright left, timestamp center, links right
- Mobile: stacked vertically with proper spacing

--- a/index.html
+++ b/index.html
@@ -298,6 +298,7 @@
         <div class="container">
             <div class="footer-content">
                 <p>&copy; <span id="current-year">2024</span> Sidhartha Reddy Potu. All rights reserved.</p>
+                <p class="last-updated">Last updated: <span id="last-updated-date">August 19, 2025</span></p>
                 <div class="footer-links">
                     <a href="https://www.linkedin.com/in/sid-rp/" target="_blank" rel="noopener noreferrer">LinkedIn</a>
                     <a href="https://github.com/sid-rp" target="_blank" rel="noopener noreferrer">GitHub</a>
