perf: add responsive images with srcset for major mobile optimization

--- a/index.html
+++ b/index.html
@@ -116,7 +116,16 @@
                 <div class="profile-container">
                     <div class="profile-column">
                         <div class="profile-image">
-                            <img src="images/sid.jpg" alt="Sidhartha Reddy Potu">
+                            <img src="images/sid-400.jpg" 
+                                 srcset="images/sid-200.jpg 200w,
+                                         images/sid-400.jpg 400w,
+                                         images/sid-800.jpg 800w"
+                                 sizes="(max-width: 768px) 200px, 400px"
+                                 alt="Sidhartha Reddy Potu" 
+                                 loading="lazy"
+                                 oncontextmenu="return false;" 
+                                 ondragstart="return false;" 
+                                 onselectstart="return false;">
                         </div>
                         <div class="social-links">
                             <a href="https://www.linkedin.com/in/sid-rp/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="social-link">
