Add presentation and report links to projects; enhance timeline with gradient glow and hexagon markers

--- a/index.html
+++ b/index.html
@@ -202,6 +202,8 @@
                         <p>Adapted DINOv2 and CroCoV2 backbones for point tracking in egocentric videos. Evaluated on the EgoPoints benchmark, reporting tracking accuracy at 8 pix, 16 pix, and 24 pix thresholds.</p>
                         <div class="project-links">
                             <a href="https://github.com/sid-rp/ego_point_trackig" target="_blank" rel="noopener noreferrer">GitHub</a>
+                            <a href="https://github.com/sid-rp/ego_point_trackig/blob/main/presentation.pdf" target="_blank" rel="noopener noreferrer" class="presentation-link">Presentation</a>
+                            <a href="https://github.com/sid-rp/ego_point_trackig/blob/main/DS_GA_3001_Course_Project_final_report.pdf" target="_blank" rel="noopener noreferrer" class="report-link">Report</a>
                         </div>
                     </div>
                     
@@ -211,6 +213,8 @@
                         <p>Optimized Meta LLaMA 3.2 3B for medical QA using LoRA, QLoRA, and GaLore. Achieved best USMLE accuracies: Step 1 - 42% (GaLore), Step 2 - 38% (QLoRA), Step 3 - 45% (GaLore). Improved MedQuAD F1 scores to 70% (QLoRA) and 69% (GaLore) with efficient fine-tuning.</p>
                         <div class="project-links">
                             <a href="https://github.com/sid-rp/medllama" target="_blank" rel="noopener noreferrer">GitHub</a>
+                            <a href="https://github.com/sid-rp/medllama/blob/main/Team_11_Dec_5.pdf" target="_blank" rel="noopener noreferrer" class="presentation-link">Presentation</a>
+                            <a href="https://github.com/sid-rp/medllama/blob/main/DS_GA_1011_final_report.pdf" target="_blank" rel="noopener noreferrer" class="report-link">Report</a>
                         </div>
                     </div>
                     
