Refactor portfolio with minimal modern UI, better typography and performance optimizations

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <meta property="twitter:image" content="https://sid-rp.github.io/images/sid.jpg">
     
     <!-- Additional Meta Tags -->
-    <meta name="theme-color" content="#3498db">
-    <meta name="msapplication-TileColor" content="#3498db">
+    <meta name="theme-color" content="#3b82f6">
+    <meta name="msapplication-TileColor" content="#3b82f6">
     <link rel="canonical" href="https://sid-rp.github.io/">
     
     <!-- Favicon -->
@@ -82,6 +82,7 @@
     </script>
 </head>
 <body class="light-theme">
+    <a href="#main-content" class="skip-link">Skip to content</a>
     <header>
         <div class="container">
             <nav>
@@ -109,7 +110,7 @@
         </div>
     </header>
 
-    <main>
+    <main id="main-content">
         <section id="about" class="section">
             <div class="container">
                 <!-- About heading removed as requested -->
