Add MTS Intern at Neopolis AI, replace resume with -21

--- a/index.html
+++ b/index.html
@@ -220,6 +220,21 @@
                         <div class="timeline-item" data-aos="fade-up">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
+                        <h3>MTS Intern</h3>
+                        <p class="experience-subtitle">Neopolis AI · Mountain View, CA</p>
+                        <p class="experience-date">August 2025 – September 2025</p>
+                        <ul>
+                            <li>Refined LiveKit-based LLM voice AI Agent prompts to improve instruction-following and downstream tool inputs</li>
+                            <li>Used Langfuse observability to inspect agent outputs and guide prompt iteration</li>
+                            <li>Added session inactivity timeouts to prevent idle conversations and improve reliability</li>
+                        </ul>
+                            </div>
+                        </div>
+                        
+                        <!-- Experience 3 -->
+                        <div class="timeline-item" data-aos="fade-up">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
                         <h3>Graduate Student Researcher, CILVR, NYU</h3>
                         <p class="experience-subtitle">3D Computer Vision under Prof. David Fouhey</p>
                         <p class="experience-date">January 2024 - May 2025</p>
@@ -233,7 +248,7 @@
                             </div>
                         </div>
                         
-                        <!-- Experience 3 -->
+                        <!-- Experience 4 -->
                         <div class="timeline-item" data-aos="fade-up">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
@@ -247,7 +262,7 @@
                             </div>
                         </div>
 
-                        <!-- Experience 4 -->
+                        <!-- Experience 5 -->
                         <div class="timeline-item" data-aos="fade-up">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
